@startuml admissions
package AdmissionsModule {
	class admissionForm {
		+ admissionId: int
		+ username: string
		+ details: Student
		- password: string

		+ updateDetails()
		+ changeUserName()
		- updatePassword()
	}

	class User {
		+ id: int
		+ name: string
		+ age: int

		+ updateName(name: string): void
		- checkValidAge(age: int): bool
		+ updateAge(age: int): void
	}

	class Student extends User {
		+ photo: Photo
		+ guardian: Guardian
		+ emergencyContact: EmergencyContact
		+ previousEducation: PreviousEducation

		+ addGuardian(guardian: Guardian): void
		+ removeGuaradian(id: Guardian.id): void
		+ addEmergencyContact(contact: EmergencyContact): void
		+ updateEmergencyContact(contact_id: EmergencyContact.id): void
		+ addPreviousEducation(eduDetails: PreviousEducation): void
		+ updateEducationDetails(): void
	}

	class Photo {
		+ size: int
		+ alt: string
		+ image: bin
		+ dateOfCreation: date
		+ resize(newSize: int): void
		+ updateAltText(newAltText: string): void
		+ changeImage(newImage: bin): void
	}

	class Guardian {
		+ id: int
		+ name: string
		+ relationship: string
		+ contactNumber: string

		+ updateName(name: string): int
		+ updateRelationship(relationship: string): int
		+ updateContactNumber(newContact: string): int
	}

	class EmergencyContact extends Guardian{
		+ description: string
		+ contactNumber: string

		+ updateContactNumber(newContact: string): int
		+ updateDescription(newDesc: string): int
	}

	class PreviousEducation {
		+ schoolName: string
		+ grade: string
		+ year: int
		
		+ updateSchoolName(schoolName: string): int
		+ updateGrade(newGrade: string): int
		+ updateYear(newYear: int): int
	}

	admissionForm "1" -- "1..*" Student: "fills"
	Student "1..*" -- "1" Photo : uploads
	Student "1..*" -- "1..*" Guardian: has
	Student "1..*" -- "1" EmergencyContact: has
	Student "1..*" -- "1..*" PreviousEducation: has
}
@enduml	
